# dev

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  image_vectors.faiss  main.ipynb  metadata.json  pyproject.toml  pytest.ini  run.py
app/: __init__.py  config.py  main.py
app/core/: __init__.py  engine.py  pipeline.py
app/models/: __init__.py  image_model.py  user_model.py
app/routes/: __init__.py  auth.py  gallery.py  scan.py
app/services/: __init__.py  embeddings.py  inference.py  search.py
app/tests/: test_app.py
app/utils/: __init__.py  logger.py  security.py
data/embeddings/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/components/: Camera.tsx  ImageGrid.tsx
frontend/pages/: _app.tsx  _document.tsx  gallery.tsx  index.tsx  scan.tsx
frontend/styles/: globals.css
logs/: .gitkeep
scripts/: build_index.py  seed_db.py
